[gd_scene load_steps=4 format=2]

[ext_resource path="res://Save Room.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 855.114, 441.161 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 960, 540 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 960, 540 )
shape = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 733.477
margin_top = 550.84
margin_right = 1195.47
margin_bottom = 771.84
theme = ExtResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 186.735
margin_top = 189.817
margin_right = 435.735
margin_bottom = 828.817
color = Color( 0.0588235, 0.878431, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = -25.0
margin_right = 275.0
margin_bottom = 75.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
margin_left = -45.0
margin_top = -23.0
margin_right = 295.0
margin_bottom = 36.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )

[node name="ColorRect3" type="ColorRect" parent="ColorRect"]
margin_left = 275.0
margin_top = 687.21
margin_right = 575.0
margin_bottom = 762.21
rect_rotation = 180.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="ColorRect"]
margin_left = 295.0
margin_top = 711.0
margin_right = 635.0
margin_bottom = 770.0
rect_rotation = 180.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1493.06
margin_top = 197.368
margin_right = 1742.06
margin_bottom = 836.368
color = Color( 0.0588235, 0.878431, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
margin_left = -25.0
margin_right = 275.0
margin_bottom = 75.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )

[node name="ColorRect2" type="ColorRect" parent="ColorRect2"]
margin_left = -45.0
margin_top = -23.0
margin_right = 295.0
margin_bottom = 36.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )

[node name="ColorRect3" type="ColorRect" parent="ColorRect2"]
margin_left = 275.0
margin_top = 687.21
margin_right = 575.0
margin_bottom = 762.21
rect_rotation = 180.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="ColorRect2"]
margin_left = 295.0
margin_top = 711.0
margin_right = 635.0
margin_bottom = 770.0
rect_rotation = 180.0
color = Color( 0.0588235, 0.878431, 0.109804, 1 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
